svn merge -c 1240232 fixes HADOOP-8018
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1240236 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -98,6 +98,9 @@ Release 0.23.1 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+   HADOOP-8018.  Hudson auto test for HDFS has started throwing javadoc
+   (Jon Eagles via bobby)
+
    HADOOP-8001  ChecksumFileSystem's rename doesn't correctly handle checksum
    files. (Daryn Sharp via bobby)
 
