MAPREDUCE-3803. Merge change r1240441 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1240444 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -638,6 +638,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3417. Fixed job-access-controls to work with MR AM and
     JobHistoryServer web-apps. (Jonathan Eagles via vinodkv)
 
+    MAPREDUCE-3803. Fix broken build of raid contrib due to HDFS-2864.
+    (Ravi Prakash via suresh)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
