MAPREDUCE-3795. "job -status" command line output is malformed. (vinodkv via mahadev) - Merging r1240593 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1240594 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -648,6 +648,9 @@ Release 0.23.1 - Unreleased
     incorrectly asserting tests (Bhallamudi Venkata Siva Kamesh
     via mahadev)
 
+    MAPREDUCE-3795. "job -status" command line output is malformed.
+    (vinodkv via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
