--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -654,6 +654,9 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3759. ClassCastException thrown in -list-active-trackers when 
     there are a few unhealthy nodes (vinodkv via mahadev)
 
+    MAPREDUCE-3775. Change MiniYarnCluster to escape special chars in testname.
+    (Hitesh Shah via mahadev)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
