--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -101,11 +101,7 @@ Release 0.23.1 - UNRELEASED
     HDFS-2814. NamenodeMXBean does not account for svn revision in the version 
     information. (Hitesh Shah via jitendra)
 
-    HDFS-2784. Update hftp and hdfs for host-based token support.
-    (Kihwal Lee via jitendra)
-
-    HDFS-2785. Update webhdfs and httpfs for host-based token support.
-    (Robert Joseph Evans via jitendra)
+    HDFS-2868. Expose xceiver counts via the DataNode MXBean. (harsh)
 
   OPTIMIZATIONS
 
