--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -663,6 +663,8 @@ Release 0.23.1 - Unreleased
     MAPREDUCE-3747. Initialize queue metrics upfront and added start/finish
     time to RM Web-UI. (acmurthy) 
 
+    MAPREDUCE-3814. Fixed MRV1 compilation. (Arun C Murthy via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
