HADOOP-7761. svn merge -c 1189613 from trunk
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1241266 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -97,6 +97,8 @@ Release 0.23.1 - Unreleased
 
   OPTIMIZATIONS
 
+    HADOOP-7761. Improve the performance of raw comparisons. (todd)
+
   BUG FIXES
    HADOOP-8013. ViewFileSystem does not honor setVerifyChecksum
    (Daryn Sharp via bobby)
