svn merge -c 1241253 from trunk for MAPREDUCE-3818.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23-PB@1241625 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -21,6 +21,11 @@ Release 0.23-PB - Unreleased
     MAPREDUCE-3740. Fixed broken mapreduce compilation after the patch for
     HADOOP-7965. (Devaraj K via vinodkv) 
 
+  BUG FIXES
+
+    MAPREDUCE-3818. Fixed broken compilation in TestSubmitJob after the patch
+    for HDFS-2895. (Suresh Srinivas via vinodkv)
+
 Release 0.23.1 - Unreleased
 
   NEW FEATURES                                                                    
