--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -700,6 +700,10 @@ Release 0.23.1 - Unreleased
 
     MAPREDUCE-3436. JobHistory webapp address should use the host configured
     in the jobhistory address. (Ahmed Radwan via sseth)
+
+    MAPREDUCE-3815. Fixed MR AM to always use hostnames and never IPs when
+    requesting containers so that scheduler can give off data local containers
+    correctly. (Siddarth Seth via vinodkv)
  
 Release 0.23.0 - 2011-11-01 
 
