svn merge -c 1242087 from trunk for HDFS-2887.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1242093 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -2,6 +2,13 @@ Hadoop HDFS Change Log
 
 Release 0.23.2 - UNRELEASED
 
+  INCOMPATIBLE CHANGES
+
+    HDFS-2887. FSVolume, is a part of FSDatasetInterface implementation, should
+    not be referred outside FSDataset.  A new FSVolumeInterface is defined.
+    The BlockVolumeChoosingPolicy.chooseVolume(..) method signature is also
+    updated.  (szetszwo)
+
   NEW FEATURES
 
   IMPROVEMENTS
