svn merge -c 1242485 from trunk for HADOOP-7923.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1242490 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/CHANGES.txt
+++ b/hadoop-common-project/hadoop-common/CHANGES.txt
@@ -8,6 +8,9 @@ Release 0.23.2 - UNRELEASED
     HADOOP-8032. mvn site:stage-deploy should be able to use the scp protocol
     to stage documents (Ravi Prakash via tgraves)
 
+    HADOOP-7923. Automate the updating of version numbers in the doc system.
+    (szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
