--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -19,6 +19,8 @@ Release 0.23.2 - UNRELEASED
     HDFS-2923. Namenode IPC handler count uses the wrong configuration key
     (todd)
 
+    HDFS-2764. TestBackupNode is racy. (atm)
+
 Release 0.23.1 - 2012-02-08 
 
   INCOMPATIBLE CHANGES
