Cleaning up hadoop-mapreduce-project/CHANGES.txt a bit.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1242898 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -2,6 +2,8 @@ Hadoop MapReduce Change Log
 
 Release 0.23.2 - UNRELEASED
 
+  INCOMPATIBLE CHANGES
+
   NEW FEATURES
 
   IMPROVEMENTS
@@ -9,6 +11,7 @@ Release 0.23.2 - UNRELEASED
   OPTIMIZATIONS
 
   BUG FIXES
+
     MAPREDUCE-3680. FifoScheduler web service rest API can print out invalid 
     JSON. (B Anil Kumar via tgraves)
 
@@ -17,6 +20,7 @@ Release 0.23.1 - 2012-02-08
   INCOMPATIBLE CHANGES
 
   NEW FEATURES
+
     MAPREDUCE-778. Rumen Anonymizer. (Amar Kamat and Chris Douglas via amarrk)
 
     MAPREDUCE-3121. NodeManager should handle disk-failures (Ravi Gummadi via mahadev)
@@ -30,6 +34,7 @@ Release 0.23.1 - 2012-02-08
     MAPREDUCE-778. Rumen Anonymizer. (Amar Kamat and Chris Douglas via amarrk)
 
   IMPROVEMENTS
+
     MAPREDUCE-3481. [Gridmix] Improve Gridmix STRESS mode. (amarrk)
 
     MAPREDUCE-3597. [Rumen] Rumen should provide APIs to access all the 
@@ -216,10 +221,6 @@ Release 0.23.1 - 2012-02-08
     acmurthy) 
 
   BUG FIXES
-    MAPREDUCE-3770. Zombie.getJobConf() results into NPE. (amarrk)
-
-    MAPREDUCE-3804. yarn webapp interface vulnerable to cross scripting attacks
-    (Dave Thompson via bobby)
 
     MAPREDUCE-2784. [Gridmix] Bug fixes in ExecutionSummarizer and 
                     ResourceUsageMatcher. (amarrk)
@@ -699,6 +700,9 @@ Release 0.23.1 - 2012-02-08
     MAPREDUCE-3808. Fixed an NPE in FileOutputCommitter for jobs with maps
     but no reduces. (Robert Joseph Evans via vinodkv)
 
+    MAPREDUCE-3804. yarn webapp interface vulnerable to cross scripting attacks
+    (Dave Thompson via bobby)
+
     MAPREDUCE-3354. Changed scripts so that jobhistory server is started by
     bin/mapred instead of bin/yarn. (Jonathan Eagles via acmurthy) 
 
@@ -711,7 +715,6 @@ Release 0.23.1 - 2012-02-08
     MAPREDUCE-3697. Support binary compatibility for Counters after
     MAPREDUCE-901. (mahadev via acmurthy) 
 
-  
     MAPREDUCE-3817. Fixed bin/mapred to allow running of distcp and archive
     jobs. (Arpit Gupta via acmurthy) 
 
@@ -747,6 +750,8 @@ Release 0.23.1 - 2012-02-08
 
     MAPREDUCE-3828. Ensure that urls in single-node mode are correct. (sseth
     via acmurthy) 
+
+    MAPREDUCE-3770. Zombie.getJobConf() results into NPE. (amarrk)
 
 Release 0.23.0 - 2011-11-01 
 
