svn merge -c 1243654 from trunk for HDFS-776.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-0.23@1243657 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
+++ b/hadoop-hdfs-project/hadoop-hdfs/CHANGES.txt
@@ -26,6 +26,9 @@ Release 0.23.2 - UNRELEASED
 
     HDFS-2869. Fix an error in the webhdfs docs for the mkdir op (harsh)
 
+    HDFS-776.  Fix exception handling in Balancer.  (Uma Maheswara Rao G
+    via szetszwo)
+
 Release 0.23.1 - 2012-02-08 
 
   INCOMPATIBLE CHANGES
