--- a/hadoop-mapreduce-project/CHANGES.txt
+++ b/hadoop-mapreduce-project/CHANGES.txt
@@ -762,6 +762,9 @@ Release 0.23.1 - 2012-02-08
     MAPREDUCE-3846. Addressed MR AM hanging issues during AM restart and then
     the recovery. (vinodkv)
 
+    MAPREDUCE-3802. Added test to validate that AM can crash multiple times and
+    still can recover successfully after MAPREDUCE-3846. (vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
